# PsiNMR

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DEPLOY.md  Dockerfile  LICENSE  README.md  README_DEV.md  ROADMAP.md  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  index.html  knip.config.ts  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: desktop-release.yml  docker-publish.yml  e2e.yml
desktop/: .gitignore  README.md  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
docker/: 10-gen-self-signed-cert.sh  nginx.conf  security-headers.conf
mobile/: .gitignore  README.md  capacitor.config.ts  package.json
mobile/www/: index.html
planning/: AUTO_UPDATE.md  DESKTOP_APP.md  MOBILE_APP.md
public/: manifest.webmanifest
public/data/: nmriumFromSource.json
public/data/108-21-4/: CoupledDecoupled13C.json
public/data/19f/: 19f.json
public/data/50-78-2/: linked-jcamp.json
public/data/BocAA/: BocAA.json
public/data/acd/: jcampWithAssignment.json
rust/psinmr-core/: Cargo.toml
rust/psinmr-core/src/: lib.rs
scripts/: install.sh
src/: constants.ts  index.tsx
src/compute/: benchmark.ts  engine.ts
src/demo/: index.css  samples.json
test-e2e/NmriumPage/: index.ts
test-e2e/core/: basic.test.ts  setting.test.ts
test-e2e/panels/: autoassignment.test.ts  filters.test.ts  integral.test.ts  matrixgeneration.test.ts  peaks.test.ts  ranges.test.ts  spectra.test.ts  structures.test.ts
(+204 files in other folders)
