[package]
name = "psinmr-core"
version = "0.1.0"
edition = "2021"
description = "PsiNMR native compute engine: contour generation, FFT, baseline correction and peak picking compiled to WebAssembly."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
rustfft = "6"

[profile.release]
opt-level = 3
lto = true
